--- a/base/templates/base/room_form.html
+++ b/base/templates/base/room_form.html
@@ -1,9 +1,8 @@
 {% extends 'main.html' %}
-
 {% block content %}
 
 <div class="create_room">
-    <form method="POST" action="">
+    <form method="POST" action='{{ action_url }}' enctype='multipart/form-data'>
         {% csrf_token %}
         {{form.as_p}}
         <input type="submit" value="Submit" />
